# Artificial-Isaac

./: .gitignore  CONFIGURATION_GUIDE.md  README.md  TODO.md  TUTORIAL.md  config.py  pyproject.toml  requirements.txt
artificial_isaac/: config.py
artificial_isaac/rag/: rag_helper.py
scripts/: inference.py  preprocess_data.py  setup_rag.py  train_model.py  train_model_modal.py
tests/: conftest.py  test_data_processing.py  test_rag.py  test_tokenization.py
tools/: rag_survey.html
