[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "artificial_isaac"
version = "0.1.0"
description = "Personalized AI chatbot with RAG fine-tuned on WhatsApp/Instagram data"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "transformers==5.2.0",
    "accelerate==1.13.0",
    "peft==0.18.1",
    "bitsandbytes==0.49.2",
    "datasets==4.3.0",
    "unsloth_zoo==2026.3.2",
    "pandas==2.3.3",
    "numpy==2.3.5",
    "whatstk==0.8.1",
    "chromadb==1.5.5",
    "sentence-transformers==5.3.0",
    "tqdm==4.67.3",
    "python-dotenv==1.2.2",
    "pytest==9.0.2"
]

[tool.setuptools.packages.find]
include = ["artificial_isaac*"]
